<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:loadImage="http://schemas.android.com/tools"
    xmlns:recycler="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="dvm"
            type="lobna.extremesolutions.marvel.ui.details.DetailsViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".ui.details.DetailsActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="@color/black_500"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/character_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7"
                    app:riv_corner_radius_bottom_left="15dp"
                    app:riv_corner_radius_bottom_right="15dp"
                    app:riv_mutate_background="true"
                    loadImage:url="@{dvm.characterObservable.thumbnail.imageUrl}" />

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="pin" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_size_medium"
                    android:onClick="@{dvm::onBackClick}"
                    android:src="@drawable/ic_back"
                    app:layout_collapseMode="pin" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/character_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_size_medium"
                    android:layout_marginTop="@dimen/margin_padding_size_xlarge"
                    android:text="@{dvm.characterObservable.name}"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_title"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_size_medium"
                    android:layout_marginTop="@dimen/margin_padding_size_large"
                    android:text="@string/description"
                    android:textColor="@color/red_200"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold"
                    android:visibility="@{dvm.descriptionAvailableObservable ? View.VISIBLE : View.GONE, default=gone}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_size_medium"
                    android:layout_marginTop="@dimen/margin_padding_size_medium"
                    android:layout_marginEnd="@dimen/margin_padding_size_medium"
                    android:text="@{dvm.characterObservable.description}"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_medium"
                    android:visibility="@{dvm.descriptionAvailableObservable ? View.VISIBLE : View.GONE, default=gone}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_size_medium"
                    android:layout_marginTop="@dimen/margin_padding_size_large"
                    android:text="@string/comics"
                    android:textColor="@color/red_200"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold"
                    android:visibility="@{dvm.comicsAvailableObservable ? View.VISIBLE : View.GONE, default=gone}" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_size_medium"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingStart="12dp"
                    android:paddingEnd="8dp"
                    android:visibility="@{dvm.comicsAvailableObservable ? View.VISIBLE : View.GONE, default=gone}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    recycler:adapter="@{dvm.comicsAdapter}"
                    tools:listitem="@layout/item_character_extras" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_size_medium"
                    android:layout_marginTop="@dimen/margin_padding_size_large"
                    android:text="@string/events"
                    android:textColor="@color/red_200"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold"
                    android:visibility="@{dvm.eventsAvailableObservable ? View.VISIBLE : View.GONE, default=gone}" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_size_medium"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingStart="12dp"
                    android:paddingEnd="8dp"
                    android:visibility="@{dvm.eventsAvailableObservable ? View.VISIBLE : View.GONE, default=gone}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    recycler:adapter="@{dvm.eventsAdapter}"
                    tools:listitem="@layout/item_character_extras" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_size_medium"
                    android:layout_marginTop="@dimen/margin_padding_size_large"
                    android:text="@string/series"
                    android:textColor="@color/red_200"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold"
                    android:visibility="@{dvm.seriesAvailableObservable ? View.VISIBLE : View.GONE, default=gone}" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_size_medium"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingStart="12dp"
                    android:paddingEnd="8dp"
                    android:visibility="@{dvm.seriesAvailableObservable ? View.VISIBLE : View.GONE, default=gone}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    recycler:adapter="@{dvm.seriesAdapter}"
                    tools:listitem="@layout/item_character_extras" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_size_medium"
                    android:layout_marginTop="@dimen/margin_padding_size_large"
                    android:text="@string/stories"
                    android:textColor="@color/red_200"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold"
                    android:visibility="@{dvm.storiesAvailableObservable ? View.VISIBLE : View.GONE, default=gone}" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_size_medium"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingStart="12dp"
                    android:paddingEnd="8dp"
                    android:visibility="@{dvm.storiesAvailableObservable ? View.VISIBLE : View.GONE, default=gone}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    recycler:adapter="@{dvm.storiesAdapter}"
                    tools:listitem="@layout/item_character_extras" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>